force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>29511 Projects object is a child of the NPLUS Job and represents a new customer packet of work that would roll-up under a Job. It will provide reporting and visibility into all the work actuals that will be collected. Key Attributes: Project level Files​. Master is Job. Children are Project Locations.</description>
    <label>Project</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Project #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>