force-app/main/default/objects/Project__c/fields/Cancelation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Date__c</fullName>
    <description>30491</description>
    <label>Cancelation Date</label>
    <type>Date</type>
</CustomField>