force-app/main/default/objects/Project__c/fields/Cancelation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Reason__c</fullName>
    <description>30491</description>
    <label>Cancelation Reason</label>
    <type>TextArea</type>
</CustomField>