force-app/main/default/objects/Project__c/fields/Job_Territory_Account_Contract__c.field-meta.xml
<CustomField>
    <fullName>Job_Territory_Account_Contract__c</fullName>
    <description>28048</description>
    <formula>NPLUS_Job__r.Service_Territory__r.Name &amp;&quot;-&quot;&amp;  NPLUS_Job__r.Service_Contract__r.Account.Name &amp;&quot;-&quot;&amp;  NPLUS_Job__r.Service_Contract__r.Name &amp;&quot;-&quot;&amp; NPLUS_Job__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Territory-Account-Contract</label>
    <type>Text</type>
</CustomField>