force-app/main/default/objects/Project__c/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <description>30491</description>
    <label>On Hold Reason</label>
    <type>TextArea</type>
</CustomField>