force-app/main/default/objects/Project__c/fields/Project_Estimate_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Estimate_Approval_Date__c</fullName>
    <description>45770 Date in which the Project Estimate Approval Status was marked Approved</description>
    <inlineHelpText>Date in which the Project Estimate Approval Status was marked Approved</inlineHelpText>
    <label>Project Estimate Approval Date</label>
    <type>Date</type>
</CustomField>