force-app/main/default/objects/Project__c/fields/Project_Estimate_Approval_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Estimate_Approval_Request_Date__c</fullName>
    <description>45770 Date in which the Estimate Approval Request was most recently submitted to the Superintendent</description>
    <inlineHelpText>Date in which the Estimate Approval Request was most recently submitted to the Superintendent</inlineHelpText>
    <label>Project Estimate Approval Request Date</label>
    <type>Date</type>
</CustomField>