force-app/main/default/objects/Project__c/fields/Project_Estimate_Approval_Requester__c.field-meta.xml
<CustomField>
    <fullName>Project_Estimate_Approval_Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>45770: Superintendent estimate approval requester</description>
    <inlineHelpText>Employee who last initiated the Estimate Approval Request</inlineHelpText>
    <label>Project Estimate Approval Requester</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Project Estimate Approval Requester</relationshipLabel>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>