force-app/main/default/objects/Project__c/fields/Project_Estimate_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Estimate_Approval_Status__c</fullName>
    <description>45770- Created to manage the Superintendent approval process initiated by the PC</description>
    <inlineHelpText>Superintendent&apos;s Project Estimate Approval Status</inlineHelpText>
    <label>Project Estimate Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Requested</fullName>
                <default>true</default>
                <label>Not Requested</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Clarification Requested</fullName>
            </value>
            <value>
                <fullName>Corrections Required</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>