force-app/main/default/objects/Project__c/fields/Sub_Project_Count__c.field-meta.xml
<CustomField>
    <fullName>Sub_Project_Count__c</fullName>
    <description>28102 Count of all related Sub Projects</description>
    <inlineHelpText>Sum of all Sub Projects related to the Project</inlineHelpText>
    <label>Sub Project Count</label>
    <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>