force-app/main/default/objects/Project__c/fields/Summarized_Completed_Estimates__c.field-meta.xml
<CustomField>
    <fullName>Summarized_Completed_Estimates__c</fullName>
    <description>This is summary of all Sub Project -&gt; Summarized Completed Estimates.</description>
    <inlineHelpText>This is summary of all Sub Project -&gt; Summarized Completed Estimates.</inlineHelpText>
    <label>Summarized Completed Estimates</label>
    <summarizedField>Sub_Project__c.Summarized_Completed_Estimates__c</summarizedField>
    <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>