force-app/main/default/objects/Project__c/fields/Summarized_Estimated_Man_Hours__c.field-meta.xml
<CustomField>
    <fullName>Summarized_Estimated_Man_Hours__c</fullName>
    <description>This is a summary of the total value of the Total Estimated Man Hours on all child Sub Projects.</description>
    <inlineHelpText>This is a summary of the total value of the Total Estimated Man Hours on all child Sub Projects.</inlineHelpText>
    <label>Summarized Estimated Man Hours</label>
    <summarizedField>Sub_Project__c.Summarized_Estimated_Man_Hours__c</summarizedField>
    <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>