force-app/main/default/objects/Project__c/fields/Summarized_Estimates__c.field-meta.xml
<CustomField>
    <fullName>Summarized_Estimates__c</fullName>
    <description>This is a summary of the total value of the Subtotal Estimates on all child Sub Projects.</description>
    <inlineHelpText>This is a summary of the total value of the Subtotal Estimates on all child Sub Projects.</inlineHelpText>
    <label>Summarized Estimates</label>
    <summarizedField>Sub_Project__c.Summarized_Estimates__c</summarizedField>
    <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>