force-app/main/default/objects/Project__c/fields/Summarized_Total_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Summarized_Total_Estimated_Cost__c</fullName>
    <description>This is summary of all Sub Project -&gt; Summarized Total Estimated Cost values.</description>
    <inlineHelpText>This is summary of all Sub Project -&gt; Summarized Total Estimated Cost values.</inlineHelpText>
    <label>Summarized Total Estimated Cost</label>
    <summarizedField>Sub_Project__c.Summarized_Total_Estimated_Cost__c</summarizedField>
    <summaryForeignKey>Sub_Project__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>