force-app/main/default/objects/Project__c/fields/Superintendent__c.field-meta.xml
<CustomField>
    <fullName>Superintendent__c</fullName>
    <description>45770 Superintendent for list views</description>
    <formula>NPLUS_Job__r.Superintendent_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Superintendent from NPLUS Job</inlineHelpText>
    <label>Superintendent</label>
    <type>Text</type>
</CustomField>