force-app/main/default/objects/Project__c/recordTypes/NPLUS_Basic.recordType-meta.xml
<RecordType>
    <fullName>NPLUS_Basic</fullName>
    <active>true</active>
    <label>NPLUS Basic</label>
</RecordType>