force-app/main/default/objects/Project__c/validationRules/ISBLANK_CANCELATION_DATE.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_CANCELATION_DATE</fullName>
    <active>true</active>
    <description>30491</description>
    <errorConditionFormula>AND(
ISBLANK(   Cancelation_Date__c   ),
TEXT( Status__c )=&apos;Canceled&apos;)</errorConditionFormula>
    <errorMessage>Project Cancelation Date is required when Status is Canceled</errorMessage>
</ValidationRule>