force-app/main/default/objects/Project__c/validationRules/ISBLANK_CANCELATION_REASON.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_CANCELATION_REASON</fullName>
    <active>true</active>
    <description>30491</description>
    <errorConditionFormula>AND(
ISBLANK(    Cancelation_Reason__c    ),
TEXT( Status__c )=&apos;Canceled&apos;)</errorConditionFormula>
    <errorMessage>Project Cancelation Reason is required when Status is Canceled</errorMessage>
</ValidationRule>