force-app/main/default/objects/Project__c/validationRules/ISBLANK_CLOSED_DATE.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_CLOSED_DATE</fullName>
    <active>true</active>
    <description>30491</description>
    <errorConditionFormula>AND(
ISBLANK( Closed_Date__c ),
TEXT( Status__c )=&apos;Closed&apos;)</errorConditionFormula>
    <errorMessage>Project Closed Date is required when Status is Closed</errorMessage>
</ValidationRule>