force-app/main/default/objects/Project__c/validationRules/ISBLANK_ON_HOLD_DATE.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_ON_HOLD_DATE</fullName>
    <active>true</active>
    <description>30491</description>
    <errorConditionFormula>AND(
ISBLANK(  On_Hold_Date__c  ),
TEXT( Status__c )=&apos;On Hold&apos;)</errorConditionFormula>
    <errorMessage>Project On Hold Date is required when Status is On Hold</errorMessage>
</ValidationRule>