force-app/main/default/objects/Project__c/listViews/All_Canceled.listView-meta.xml
<ListView>
    <fullName>All_Canceled</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Title__c</columns>
    <columns>Planned_Start_Date__c</columns>
    <columns>NPLUS_Job__c</columns>
    <columns>Account__c</columns>
    <columns>Service_Territory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Canceled</value>
    </filters>
    <label>All (Canceled)</label>
</ListView>