force-app/main/default/objects/Project__c/listViews/All_Open.listView-meta.xml
<ListView>
    <fullName>All_Open</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Title__c</columns>
    <columns>NPLUS_Job__c</columns>
    <columns>Account__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>On_Hold_Date__c</columns>
    <columns>On_Hold_Reason__c</columns>
    <columns>Planned_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,On Hold</value>
    </filters>
    <label>All (Open)</label>
</ListView>