force-app/main/default/objects/Project__c/listViews/Projects_Open_Estimate_Approvals.listView-meta.xml
<ListView>
    <fullName>Projects_Open_Estimate_Approvals</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Project_Estimate_Approval_Status__c</columns>
    <columns>Superintendent__c</columns>
    <columns>Project_Estimate_Approval_Requester__c</columns>
    <columns>Project_Estimate_Approval_Request_Date__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>Status__c</columns>
    <columns>NPLUS_Job__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,On Hold</value>
    </filters>
    <filters>
        <field>Project_Estimate_Approval_Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval,Clarification Requested,Corrections Required</value>
    </filters>
    <label>Projects: Open Estimate Approvals</label>
</ListView>